# Cafe5

./: .cursorrules  .gitignore  GtZAmU.json  HXxlzP.json  HvpQCs.json  MTnPtT.json  QKfJuU.json  QadxZs.json  XFGmCy.json  Xbhcwy.json  ZDsRRP.json  backup.bat  buJtOA.json  cleardb.sql  commits.txt  db.cafe5.bak  db.cafe5.rar  db.cafe5.sql  dbservice5updates.txt  dbupdates.triggers  dbupdates.txt  djYFcC.json  dnsRrZ.json  frqwsN.json  git.commit.bat  iQRGhF.json  lzmPvt.json  noGnlc.json  oNrDfI.json  sXOjIG.json  tr.bat  uBskNU.json
Service5/: CMakeLists.txt  Service5.pro  Service5.ts  armsoft.cpp  armsoft.h  c5license.cpp  c5license.h  c5searchengine.cpp  c5searchengine.h  configini.cpp  configini.h  database.cpp  database.h  databaseconnectionmanager.cpp  databaseconnectionmanager.h  dlglicenses.cpp  dlglicenses.h  dlglicenses.ui  firebase.cpp  firebase.h  httpheader.cpp  jsonhandler.h  main.cpp  main_linux.cpp  monitor.cpp  monitor.h  monitor.ui  monitoringwindow.cpp  monitoringwindow.h  pluginmanager.cpp  pluginmanager.h  rc.h  res.qrc  serverprinting.cpp  serverprinting.h  serverthread.cpp  serverthread.h  socketdata.cpp  socketdata.h  socketthread.cpp  (+7 more)
Service5/datadriver/: datadriver.cpp  datadriver.h  dduser.cpp  dduser.h
Service5/handlers/: authentication.cpp  authentication.h  chat.cpp  chat.h  confirmregistration.cpp  confirmregistration.h  forbidden.cpp  forbidden.h  httpheader.cpp  httpheader.h  jzstore.cpp  jzstore.h  notfound.cpp  notfound.h  registration.cpp  registration.h  requesthandler.cpp  requesthandler.h  requestmanager.cpp  requestmanager.h  shoprequest.cpp  shoprequest.h  socketdata.h  storerequest.cpp  storerequest.h  tax.cpp  tax.h
Service5/headers/: registrationstate.h
Service5/raw/: messagelist.h  raw.cpp  raw.h  rawbalancehistory.cpp  rawbalancehistory.h  rawcarnear.cpp  rawcarnear.h  rawcoordinate.cpp  rawcoordinate.h  rawdataexchange.cpp  rawdataexchange.h  rawdllop.cpp  rawdllop.h  rawhandler.cpp  rawhandler.h  rawhello.cpp  rawhello.h  rawmessage.cpp  rawmessage.h  rawmonitor.cpp  rawmonitor.h  rawregisterphone.cpp  rawregisterphone.h  rawregistersms.cpp  rawregistersms.h  rawsilentauth.cpp  rawsilentauth.h  rawyandexkey.cpp  rawyandexkey.h  structs.h
Service5/res/: airlog.sql  cafe5.sql  server5.sql  shopclientp.qrc  sq.txt  sq2.txt  tr_am.txt
Service5/socket/: sslserver.cpp  sslserver.h  sslsocket.cpp  sslsocket.h
Service5/store/: shopmanager.cpp  store.cpp  store.h  storemanager.cpp  storemanager.h  storerecord.cpp  storerecord.h
Service5/utils/: c5printing.cpp  commandline.cpp  configini.cpp  configini.h  database.cpp  database.h  databaseconnectionmanager.cpp  databaseconnectionmanager.h  debug.cpp  debug.h  gtranslator.cpp  gtranslator.h  jsonhandler.cpp  logwriter.cpp  logwriter.h  networktable.cpp  networktable.h  os.h  sqlqueries.h  storemovement.cpp  tablerecord.h  threadworker.cpp  threadworker.h
Service5/worker/: c5jsonparser.h  c5structtraits.h  socketstruct.cpp  socketstruct.h  store_doc_status.h  store_doc_type.h  store_inventory_document.h  struct_cashbox.h  struct_currency.h  struct_dish.h  struct_doc_store_input.h  struct_employee.h  struct_employee_group.h  struct_fiscal_machine.cpp  struct_fiscal_machine.h  struct_goods_group.h  struct_goods_item.h  struct_goods_type.h  struct_hall.h  struct_parent.h  struct_partner.h  struct_payment_type.h  struct_storage_item.h  struct_table.h  struct_waiter_dish.h  struct_waiter_order.h  (+2 more)
Shop/: CMakeLists.txt  Shop - Copy.ts  Shop.net.pro  Shop.net.pro.user~RF13c97ff1.TMP  Shop.net.pro.user~RF13d1cd30.TMP  Shop.net.pro.user~RF13e57819.TMP  Shop.net.pro.user~RF1687aefa.TMP  Shop.net.pro.user~RF1687c6c8.TMP  Shop.pro  Shop.pro.user.3cb35f3  Shop.pro.user.4.9-pre1  Shop.pro.user.4d2ed68  Shop.pro.user.b56fefc  Shop.pro.user~RF168806ce.TMP  Shop.qm  Shop.ts  Shop.x86.pro  Shop.x86.pro.user.4d2ed68  Shop.x86.pro.user.d94b692.4.8-pre1  c5replication.cpp  c5replication.h  c5shopdialog.cpp  c5shopdialog.h  c5tempsale.cpp  c5tempsale.h  c5tempsale.ui  cashcollection.cpp  cashcollection.cpp.orig  cashcollection.h  cashcollection.ui  cashcollection.ui.autosave  chatmessage.h  dlgcashout.cpp  dlgcashout.h  dlgcashout.ui  dlgdate.cpp  dlgdate.h  dlgdate.ui  dlggetidname.cpp  dlggetidname.h  (+126 more)
Smart/: CMakeLists.txt  Smart.net.pro  Smart.net.pro.user.fb4f21e  Smart.pri  Smart.pro  Smart.pro.user.21  Smart.pro.user.3cb35f3  Smart.pro.user.4.9-pre1  Smart.pro.user.b56fefc  Smart.pro.user.fa786cc.4.8-pre1  Smart.pro.user.fb4f21e  Smart.pro.user.orig  Smart.qm  Smart.ts  Smart.x86.net.pro  Smart.x86.net.pro.user.fb4f21e  Smart.x86.pro  Smart.x86.pro.user.d94b692.4.8-pre1  change.cpp  change.h  change.ui  dish.h  dishitemdelegate.cpp  dishitemdelegate.h  dishpackage.cpp  dishpackage.h  dishpartitemdelegate.cpp  dishpartitemdelegate.h  dishtableitemdelegate.cpp  dishtableitemdelegate.h  dlgmemoryread.cpp  dlgmemoryread.h  dlgmemoryread.ui  dlgpassword.cpp  dlgpassword.h  dlgpassword.ui  dlgsmartreports.cpp  dlgsmartreports.h  dlgsmartreports.ui  dlgsplashscreen.cpp  (+39 more)
Updater/: CMakeLists.txt  Updater.pro  install.cpp  install.h  install.ui  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  res.rc  updatemanger.cpp  updatemanger.h  updatethread.cpp  updatethread.h  version.h
Waiter/: CMakeLists.txt  Waiter - Copy.ts  Waiter.net.pro  Waiter.pro  Waiter.pro.user.21  Waiter.pro.user.3cb35f3  Waiter.pro.user.4.9-pre1  Waiter.pro.user.4d2ed68  Waiter.pro.user.d94b692  Waiter.pro.user.fb4f21e  Waiter.pro.user.orig  Waiter.qm  Waiter.ts  Waiter.vcxproj  Waiter.vcxproj.filters  Waiter.x86.pro  c5cafecommon.cpp  c5cafecommon.h  c5lineeditwithselector.cpp  c5lineeditwithselector.h  c5printreceiptthread.cpp  c5printreceiptthread.h  c5printreceiptthread50mm.cpp  c5printreceiptthread50mm.h  c5printservicethread.cpp  c5printservicethread.h  c5waiterconfiguration.cpp  c5waiterconfiguration.h  c5waiterdialog.cpp  c5waiterdialog.h  dishitem.cpp  dishitem.h  dishitem.ui  dishitembutton.cpp  dishitembutton.h  dlgaskforprecheck.cpp  dlgaskforprecheck.h  dlgaskforprecheck.ui  dlgcarnumber.cpp  dlgcarnumber.h  (+221 more)
(+4436 files in other folders)
